# c-examples

./: main  main.c  prograama1
archivos/: 1-archivos.c  2-archivos.c  3-archivos.c  4-archivos.c  5-archivos.c  6-stderr.c  7-exit.c  ejemplo.txt  resultados.txt
cmake_test/: CMakeLists.txt  Makefile
cmake_test/include/: hello_world.h
cmake_test/src/: hello_world.c
cmake_test/test/: main.c
debugging/: 0-codigo_retorno.c  1-errno.c  2-printf.c  printf
ej_avanzados/: 0-repaso.c  1-arreglos-multid.c  2-listas-enlazadas.c  3-arboles-binarios.c  arboles.txt
enums/: 1-enums.c  3-bit-a-bit.c  4-structs.c  5-comunes.c  6-comunes.c  7-comunes.c
funciones/: 10  10-alcance.c  11  11-estaticas.c  7  7-funciones.c  8  8-prototipos.c  9  9-encabezados.c  9-encabezados.h
intro_c/: 1  1-holamundo.c  2-tipos.c  3  3-casting.c  4  4-while.c  5  5-dowhile.c  6  6-for.c  7  7-ifelse.c  8  8-switch.c  a.out
io/: 1-args.c  2-args.c  3-stdio.c  4-printf.c  5-scanf.c  output  salida  texto
linked_lists/: 0-simple.c  1-double.c
operators/: 1  1-constantes.c  10  10-increment.c  11  11-bitwise.c  12  12-cond.c  2  2-constantes-2.c  3  3-scope.c  4  4-scope-file-1.c  4-scope-file-2.c  5  5-escape.c  6  6-operators.c  7  7-operators.c  8  8-operators.c  9  9-conv.c
punteros/: 0-punteros.c  1-punteros.c  10-arrays-de-punteros.c  11-punteros-a-punteros.c  12-array-multi.c  13-init-arr-punteros.c  14-manejo-mem.c  15-manejo-mem.c  16-array-punteros.c  17-array-punteros.c  18-error-free.c  19-error-free.c  2-punteros.c  20-error-free.c  3-swap.c  4-array.c  5-array.c  6-array.c  (+3 more)
(+31 files in other folders)
